# detect

./: .gitignore  config.py  data.yaml  data_handle.ipynb  main.py  pyproject.toml  yolo.ipynb  yolo_predict.ipynb
